
#### 收集源文件
file(GLOB_RECURSE PROJ_TEST_SOURCES_COLLECTED RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS * )
LOG(${CMAKE_CURRENT_LIST_FILE}:${CMAKE_CURRENT_LIST_LINE} PROJ_TEST_SOURCES_COLLECTED)
# set(PROJ_TEST_SOURCES_COLLECTED
#     main.cpp
# )
####

add_executable(Test_${PROJECT_NAME} ${PROJ_TEST_SOURCES_COLLECTED})
target_link_libraries( Test_${PROJECT_NAME} gtest_main )
add_test(NAME Test_${PROJECT_NAME} COMMAND Test_${PROJECT_NAME})